<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/serviceshere"
        android:textSize="20sp"
        android:textStyle="bold|italic|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/lblEntrar"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/switch_trcks"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:text="@string/entrar"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="16dp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:id="@+id/lblRegistrarse"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:text="@string/registrarse"
                    android:textAlignment="center"
                    android:textColor="@color/bgColorLogin"
                    android:textSize="16dp"
                    android:textStyle="bold|normal" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/loginlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Email o Usuario"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Contraseña"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtClave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/olvidaste_tu_contrase_a"
                    android:textAlignment="center"
                    android:textColor="#616161"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btnEntrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:text="@string/iniciar_sesi_n"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    app:backgroundTint="@color/bgColorLogin"
                    app:shapeAppearanceOverlay="@style/Button5" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/registrolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Email"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtREmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Usuario"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Contraseña"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRClave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="Repetir contraseña"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRClave2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/btnRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/registrar"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="17sp"
                        app:backgroundTint="@color/bgColorLogin"
                        app:shapeAppearanceOverlay="@style/Button5" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_twitter" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="O"
                android:textAlignment="center"
                android:textColor="#474646"
                android:textSize="18sp"
                android:textStyle="normal" />
            <Button
                android:id="@+id/btnInvitado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/entrar_como_invitado"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                app:backgroundTint="@color/bgColorLogin"
                app:shapeAppearanceOverlay="@style/Button5" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>